@@ -34,3 +34,5 @@ gwmthumbnail.h
 xgen-gmh
 panel-2
 panel.server
+panel-typebuiltins.c
+panel-typebuiltins.h
