@@ -1,3 +1,9 @@
+2001-08-18  Martin Baulig  <baulig@suse.de>
+
+	* Makefile.am: Added rules to create panel-typebuiltins.[ch].
+
+	* panel-typebuiltins.[ch]: Create these files from glib-mkenums.
+
 2001-08-12  Martin Baulig  <baulig@suse.de>
 
 	* Makefile.am: Put gwmh back, less work this way.
